fixed toastify issue

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eazynet-web",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "main-common.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
