--- a/package.json
+++ b/package.json
@@ -29,28 +29,33 @@
   },
   "homepage": "https://eazynet.app",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.4.4",
-    "@supabase/supabase-js": "^2.39.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
-    "lucide-react": "^0.263.1",
-    "sonner": "^1.4.3"
+    "lucide-react": "^0.400.0",
+    "next": "15.4.4",
+    "next-themes": "^0.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sonner": "^1.4.3",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@eslint/eslintrc": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "tailwindcss": "^3.3.3",
-    "@tailwindcss/postcss": "^4.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@tailwindcss/forms": "^0.5.6",
     "eslint": "^8.0.0",
     "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3.0.0"
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.0.0"
   }
 }
