--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tunnel": "npx ngrok http 3000",
+    "tunnel-alt": "lt --port 3000"
   },
   "repository": {
     "type": "git",
@@ -62,6 +64,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^8.0.0",
     "eslint-config-next": "15.4.4",
+    "ngrok": "^5.0.0-beta.2",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0"
